--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = opencli
-version = 1.0.0
+version = 1.0.1
 author = BlazeMC404
-author_email = your.email@example.com
+author_email = blazemc404@example.com
 description = Python framework for creating custom terminals and command-line shells
 long_description = file: README.md
 long_description_content_type = text/markdown
